Refactor: Remove unused imports and clean up SeedData
- Removed unused import statements from UpdateChecker and ToastNotification classes.
- Deleted unnecessary location entries in SeedData to streamline data initialization.
- Cleaned up imports in IntervalTreeTest to enhance code clarity.